@@ -1,3 +1,8 @@
+Nov 20, 2003
+
+  * ENHANCED: Tools/Add missing labels: better cleaning of label names,
+    capitalise class-names (but not the name of other resources).
+
 Nov 18, 2003
 
   * ADDED: Protected files and directing new triples to specified files.
